Backend: complete Lambda functions with local validation
- Implemented 3 core Lambda functions: get-posts, get-projects, create-post
- Added shared utilities: responses.js and dynamodb-client.js
- Established local testing framework with mock data
- All functions validated with successful test execution
- Maintained enterprise comment patterns and project standards
- Captured validation evidence: 3 new screenshots

Evidence captured:
- get-posts-test-success.PNG
- get-projects-test-success.PNG
- create-post-test-success.PNG

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,10 @@
   },
   "keywords": [
     "aws",
-    "serverless",
+    "serverless", 
     "lambda",
     "dynamodb"
   ],
-  "author": "Enterprise AWS Platform",
+  "author": "Sabin Rana",
   "license": "MIT"
 }
