--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,10 @@ logs/
 # Temporary files
 tmp/
 temp/
+
+# SAM CLI installation files
+aws-sam-cli-linux-x86_64.zip
+sam-installation/
+
+# AWS SAM build directories
+.aws-sam/
